# tenx-phase-2-assessment-chimera-project

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml
Dockerfile/: Dockerfile
Research/: architecture_strategy.md  notes.md  strategic_analysis.md  tooling_strategy.md
app/: __init__.py
app/skills/: __init__.py  safety_judge.py  trend_analyzer.py
scripts/: spec_check.py
skills/: OVERVIEW.md  README.md
skills/safety_judge/: README.md
skills/trend_analyzer/: README.md
skills/video_assembler/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_contracts.py  test_skills_interface.py  test_trend_fetcher.py  test_trend_fetcher_contract.py
